rm anciliary material #1

--- a/root.tex
+++ b/root.tex
@@ -30,10 +30,6 @@
 \usepackage{microtype}
 \DisableLigatures[f]{encoding = *, family = * }
 
-% Remove comment for double spacing
-%\usepackage{setspace} 
-%\doublespacing
-
 % Text layout
 \raggedright
 \setlength{\parindent}{0.5cm}
@@ -76,8 +72,7 @@
 \begin{flushleft}
 {\Large
 
-\textbf\newline{The high-dimensional structure of feasible muscle activations reconciles alternative approaches to motor control } % Please use "title case" (capitalize all terms in the title except conjunctions, prepositions, and articles).
-% multimuscle
+\textbf\newline{The high-dimensional structure of feasible muscle activations reconciles alternative models to motor control }
 }
 
 % \newline
@@ -102,8 +97,6 @@ Francisco J. Valero-Cuevas\textsuperscript{3,4*,\ddag}
 \bigskip
 
 % Insert additional author notes using the symbols described below. Insert symbol callouts after author names as necessary.
-% 
-% Remove or comment out the author notes below if they aren't used.
 %
 % Primary Equal Contribution Note
 \Yinyang These authors contributed equally to this work.
@@ -116,14 +109,6 @@ Francisco J. Valero-Cuevas\textsuperscript{3,4*,\ddag}
 \textcurrency Current Address: Ronald Tutor Hall, RTH-404 
 3710 S. McClintock Ave 
 Los Angeles, CA 90089-2905, USA  % change symbol to "\textcurrency a" if more than one current address note
-% \textcurrency b Insert second current address 
-% \textcurrency c Insert third current address
-
-% Deceased author note
-% \dag Deceased
-
-% Group/Consortium Author Note
-% \textpilcrow Membership list can be found in the Acknowledgments section.
 
 % Use the asterisk to denote corresponding authorship and provide email address in note below.
 * valero@usc.edu
