#1 shortened model intro

--- a/root.tex
+++ b/root.tex
@@ -189,8 +189,8 @@ We describe the mathematical basis and full notes of our implementation in the A
 
 \subsection*{Realistic index finger model}
 \label{ss:finger}
-We  applied this methodology to our published model of an index finger for static fingertip force production. 
-The model of a right human index finger is described in detail elsewhere \cite{Valero-Cuevas1998Large,Valero-Cuevas2000Scaling,valero-cuevas2009computational}. Briefly,  the input to the model is a 7-D muscle activation pattern $\textbf{a}$, and the output is a 4-D  wrench (i.e., static forces and torques) at the fingertip  $\textbf{w}$
+We  applied this methodology to our published model of an index finger for static fingertip force production. The model is described in detail elsewhere \cite{Valero-Cuevas1998Large,Valero-Cuevas2000Scaling,valero-cuevas2009computational}. 
+Briefly, the input to the model is a 7-D muscle activation pattern $\textbf{a}$, and the output is a 4-D  wrench (i.e., static forces and torques) at the fingertip  $\textbf{w}$
 
 \begin{eqnarray}
 \textbf{w} = H  \textbf{a} \\
